--- a/signup.html
+++ b/signup.html
@@ -134,15 +134,15 @@
               <form id="SignUpForm" action="POST" data-netlify="true" class="col s12" style="margin-left: 60px;">
                 <div class="row">
                   <div class="input-field col s10">
-                    <input id="name" name="name" type="text" class="validate">
+                    <input id="name" name="name" type="text" class="validate" required>
                     <label  style="color: white; for="name">Full Name</label>
                   </div> 
                   <div class="input-field col s10">
-                    <input id="email" name="email" type="email" class="validate">
+                    <input id="email" name="email" type="email" class="validate" required>
                     <label  style="color: white; for="email">Email</label>
                   </div>
                   <div class="input-field col s10">
-                    <input id="school" name="school" type="text" class="validate">
+                    <input id="school" name="school" type="text" class="validate" required>
                     <label  style="color: white; for="school">School</label>
                   </div>
                   <div class="input-field col s10">
