required for contact us inputs

--- a/index.html
+++ b/index.html
@@ -232,15 +232,15 @@
             <h4>Contact</h4>
             <form id="SpryContactForm" action="POST" data-netlify="true">
             <div class="input-field">
-              <input type="text" name="name"id="name" placeholder="Name">
+              <input type="text" name="name"id="name" placeholder="Name" required>
               <label for="name">Name</label>
             </div>
             <div class="input-field">
-              <input type="email" name="email" id="email" placeholder="Email">
+              <input type="email" name="email" id="email" placeholder="Email" required>
               <label for="email">Email</label>
             </div>
             <div class="input-field">
-              <input type="text" id="phone" name="phone" placeholder="Phone Number">
+              <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
               <label for="phone">Phone</label>
             </div>
   
